# enpoisson

./: .gitignore  README.md  model_state.pth  package-lock.json  requirements.txt
backend/: .gitignore  README.md  chess_engine.py  database.py  generate_prompts.py  heuristics.py  main.py  manage.py  models.py  nn_models.py  pyproject.toml  utils.py  vocab-black-1100.pkl  vocab-black-1500.pkl  vocab.pkl
backend/api/: urls.py  views.py
backend/enpoisson/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  bun.lockb  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Login.jsx  constants.css  index.css  index.html  index.js
frontend/src/components/: Bar.js  Board.js  FileUpload.js  Files.js  Footer.css  Footer.js  Navbar.css  Navbar.js  Piece.js  Pieces.js  PlusButton.css  PlusButton.jsx  Ranks.js
frontend/src/pages/: About.js  Account.js  AnalysisMoves.css  AnalysisMoves.js  Analyze.css  Analyze.js  Analyzed.css  Analyzed.js  Home.css  Home.js  Login.css  (+10 more)
research/: cleansed_llm_data.txt  demo.pgn  heuristics.py  knight_sac.pgn  model_state.pth  parse_data.py  ruy_lopez.py  ruy_lopezes.txt  single_game.pgn  smol_game.pgn
research/data/: full_vocab.pkl  full_vocab_no_checkmate.pkl
research/notebooks/: 1.pgn  csv_combine.ipynb  csv_creator.ipynb  csv_to_memmap.ipynb  data_processing.ipynb  data_processing_utils.py  exploration.ipynb  exploration_cnn.ipynb  exploration_multi_modal.ipynb  exploration_transformer.ipynb  exploration_vit.ipynb  explore.ipynb  explore_cnn.ipynb  explore_multi_modal copy.ipynb  explore_multi_modal.ipynb  explore_multi_modal_two.ipynb  explore_multi_modal_yo.ipynb  explore_transformer.ipynb  explore_tree_search.ipynb  models.py  multimodalmodel.pth  notes.md  train_multi_modal.py  train_multimodal.py  utils.py
research/src/: chesstest.py  cnn_parse.py  generate_prompts.py  heuristics.py  lichess_parse.py  parse_data.py  read_db.py
(+51 files in other folders)
