[tool.poetry]
name = "enpoisson-backend"
version = "0.1.0"
description = ""
authors = ["nlao1 <nlao@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.7"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
